[fixed] bugs
