# ecclesiast-api/swagger.json
@@ -115,7 +115,7 @@
         }
       }
     },
-    "/sign-in": {
+    "/auth/sign-in": {
       "post": {
         "tags": [
           "Auth"
@@ -138,7 +138,7 @@
         }
       }
     },
-    "/sign-up": {
+    "/auth/sign-up": {
       "post": {
         "tags": [
           "Auth"
@@ -154,7 +154,7 @@
         }
       }
     },
-    "/refresh": {
+    "/auth/refresh": {
       "post": {
         "tags": [
           "Auth"
